<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        style="@style/Header" >

        <LinearLayout
            android:id="@+id/header_rl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="left|center" >

            <TextView
                android:id="@+id/contact_picker_title"
                style="@style/Text.HeaderCentered"
                android:layout_gravity="left|center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/trayecto" />

            <ProgressBar
                android:id="@+id/progressbar_spinner"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:indeterminate="true"
                android:padding="12.0dip"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="top|right|center"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/imgBotonBuscar"
                style="@style/HeaderButton"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:layout_gravity="right|center"
                android:background="@drawable/selector_orange_gradient"
                android:scaleType="center"
                android:src="@drawable/button_search" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/TextViewDestino"
        style="@style/Text.FieldHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AutoCompleteTextViewOrigen"
        android:layout_marginTop="0dp"
        android:text="@string/destino"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <AutoCompleteTextView
        android:id="@+id/AutoCompleteTextViewOrigen"
        style="@style/Text.Field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewOrigen"
        android:ems="10"
        android:textColor="#000000" >

        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/AutoCompleteTextViewDestino"
        style="@style/Text.Field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewDestino"
        android:ems="10"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewOrigenBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="56dp"
        android:layout_marginRight="33dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewDestinoBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewOrigenBuffer"
        android:layout_alignTop="@+id/textViewOrigenBuffer"
        android:layout_marginTop="14dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <DatePicker
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AutoCompleteTextViewDestino"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewOrigen"
        style="@style/Text.FieldHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:text="@string/origen"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        style="@style/Text.FieldHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fecha"
        android:layout_marginTop="14dp"
        android:text="@string/recientes"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/listaReciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="8dp" >

    </ListView>

</RelativeLayout>