<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".HorarioActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        style="@style/Header" >

        <LinearLayout
            android:id="@+id/header_rl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="left|center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:layout_weight="0.90"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvTituloOrigen"
                    style="@style/Text.HeaderDosLineas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvTituloDestino"
                    style="@style/Text.HeaderDosLineas"
                    android:layout_width="match_parent"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar_spinner"
                android:layout_width="48dp"
                android:layout_height="@dimen/header_height"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:indeterminate="true"
                android:padding="12.0dip"
                android:visibility="invisible" />


            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/imgBotonDiaAnterior"
                style="@style/HeaderButton"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:background="@drawable/selector_orange_gradient"
                android:scaleType="center"
                android:src="@drawable/button_flecha_izquierda" />

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="top|right|center"
                android:background="@drawable/divider" />

            <ImageButton
                android:id="@+id/imgBotonDiaSiguiente"
                style="@style/HeaderButton"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:layout_gravity="right|center"
                android:background="@drawable/selector_orange_gradient"
                android:scaleType="center"
                android:src="@drawable/button_flecha_derecha" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvFecha"
        style="@style/Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:gravity="center_horizontal"
        android:paddingBottom="3.0dip"
        android:paddingTop="10.0dip"
        android:text="Jueves 3 de Enero de 2013"
        android:textSize="20.0sp"
        android:textStyle="bold"
         />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/textView5"
        android:layout_above="@+id/layoutPubli"
        android:layout_below="@+id/textView3"
		android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listaHorarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/white"
             >
        </ListView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:text="@string/salida"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:text="@string/duracion"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/countrypicker_blue" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFecha"
        android:layout_centerHorizontal="true"
        android:text="@string/llegada"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red" />

    <LinearLayout
        android:id="@+id/layoutPubli"
        android:layout_width="fill_parent"
        android:layout_height="75px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >
        
        <com.google.ads.AdView 
            			android:id="@+id/adView"
            			android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        ads:adUnitId="a15137bf984acb6"
                        ads:adSize="BANNER"
                        ads:testDevices="TEST_EMULATOR, 68EDAE652512332A68CA6E88901641B"
                        ads:loadAdOnCreate="true"/>

    </LinearLayout>

</RelativeLayout>